Fixed help bubble tray jiggle and z-indexing issues.

--- a/resources/public/css/refheap.css
+++ b/resources/public/css/refheap.css
@@ -502,8 +502,9 @@ div#help-dialog {
     margin-top: -320px;
     width: 350px;
     margin-left: -350px;
-    z-index: 100;
     font-size: 16px;
+    position: absolute;
+    z-index: 5;
 }
 
 div#help-dialog > div {
@@ -563,6 +564,7 @@ div#help-bubble-tray {
     bottom: 0px;
     box-shadow: -1px -1px 5px #1D1D1D;
     position: fixed;
+    height: 30px;
     right: 0px;
 }
 
